force-app/main/default/objects/fw1__Invoice_Line_Usage__c/fw1__Invoice_Line_Usage__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Usage</label>
    <nameField>
        <label>Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Line Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>