force-app/main/default/objects/fw1__Invoice_Line_Usage__c/fields/fw1__End_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>