force-app/main/default/objects/fw1__Invoice_Line_Usage__c/fields/fw1__Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Line__c</fullName>
    <label>Invoice Line</label>
    <referenceTo>fw1__Invoice_Line__c</referenceTo>
    <relationshipLabel>Invoice Line Usages</relationshipLabel>
    <relationshipName>Invoice_Line_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>