force-app/main/default/objects/fw1__Invoice_Line_Usage__c/fields/fw1__Recurring_Invoice_Line_Usage__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recurring_Invoice_Line_Usage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Invoice Line Usage</label>
    <referenceTo>fw1__Recurring_Invoice_Line_Usage__c</referenceTo>
    <relationshipLabel>Invoice Line Usages</relationshipLabel>
    <relationshipName>Invoice_Line_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>