force-app/main/default/objects/fw1__Invoice_Line_Usage__c/fields/fw1__UM__c.field-meta.xml
<CustomField>
    <fullName>fw1__UM__c</fullName>
    <label>UM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>fw1__Usage_UM</valueSetName>
    </valueSet>
</CustomField>